[package]
name = "manzanero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
projector = ["proj"]

[dependencies]
shapefile = {version = "0.3", features = ["geo-types"]}
geo = "0.18"
geo-types = "0.7"
csv = "1.1"
serde = { version = "1", features = ["derive"]}
rayon = "1.5"
chrono = "0.4"
kdtree = "0.6.0"
proj = { version = "0.25.2", features = ["geo-types"], optional = true}
